@@ -1,3 +1,15 @@
+2012-02-24  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] MiniBrowser should reload the view then the reload button is clicked
+        https://bugs.webkit.org/show_bug.cgi?id=79472
+
+        Reviewed by Philippe Normand.
+
+        * MiniBrowser/gtk/BrowserWindow.c:
+        (reloadCallback): Call webkit_web_view_reload().
+        (browser_window_init): Connect reload item clicked even to
+        reloadCallback instead of activateUriEntryCallback.
+
 2012-02-24  Kentaro Hara  <haraken@chromium.org>
 
         Add performance tests for DOM attribute getters and setters
